test/data/semantic/bad/struct_or_enum_not_found.coy
struct S(A);

fn main() -> () {
    ()
}
